# DeepLearning

./: .gitignore  README.md  pyproject.toml
exercises/: E0-MLP-1.ipynb  E0-MLP.ipynb  E1-MLP_image_classification.ipynb  E2-CNN-2.ipynb  E2-CNN.ipynb  E2.2-Exploring_Layer_Effects.ipynb  E3-RL-black-jack.ipynb
lectures/: 00-intro-MLP.ipynb  01-MLP-earlystopping.ipynb  02-1-cifar10.ipynb  02-CNN-intro.ipynb  03-mer-CNN.ipynb  04-Reinforcementlearning.ipynb  05-sista-om-CNN.ipynb  06-transferlearning.ipynb  07-time-series.ipynb  08-text-processing.ipynb  09-transformers.ipynb  09a-transformers.ipynb  09b-transformers.ipynb  10-GAN.ipynb  11-transformers_LLM.ipynb  12-DeepDream.ipynb  13-LLM_finetuning_LoRA.ipynb  14-style_transfer.ipynb  20-projektet.ipynb  gg_27nov.ipynb
lectures/code-alongs/: 00-intro-mnist.ipynb  01-MLP-classification.ipynb  02-mer-MLP.ipynb  03-RL-gymnasium.ipynb
