[project]
name = "deeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium==0.29.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pylance>=0.19.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tensorflow-intel>=2.18.0",
    "tensorflow>=2.18.0",
    "torch>=2.5.1",
]
